--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.cjs",
+    "build": "npm install && tsc",
+    "seed": "npx tsx server/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +17,8 @@
     "@types/three": "^0.182.0",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
