Fix package.json syntax and dependencies

--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.cjs",
     "build": "npm install && tsc",
+    "start": "node dist/index.cjs",
     "seed": "npx tsx server/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Fantasy Arena - 5-a-side Fantasy Sports",
   "dependencies": {
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
-    "@types/three": "^0.182.0",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1"
   },
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "typescript": "^5.7.3",
+    "@types/node": "^20.0.0",
+    "@types/three": "^0.182.0"
   }
 }
