Create root package.json that delegates build to Fantasy-Sports-Exchange/package.json

--- a/package.json
+++ b/package.json
@@ -1,25 +1,1 @@
-{
-  "name": "workspace",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "build": "npm install && tsc",
-    "start": "node dist/index.cjs",
-    "seed": "npx tsx server/seed.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "Fantasy Arena - 5-a-side Fantasy Sports",
-  "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
-    "three": "^0.182.0",
-    "three-stdlib": "^2.36.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.7.3",
-    "@types/node": "^20.0.0",
-    "@types/three": "^0.182.0"
-  }
-}
+{\n  "name": "my-root-project",\n  "private": true,\n  "scripts": {\n    "build": "npm run build --workspace=Fantasy-Sports-Exchange",\n    "start": "npm start --workspace=Fantasy-Sports-Exchange",\n    "dev": "npm run dev --workspace=Fantasy-Sports-Exchange"\n  }\n}
