--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.3.1"
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
