--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-day-picker": "^8.10.1",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
